<resources>
    <string name="app_name">GinLemons</string>
    <string name="ricette">Ricette</string>
    <string name="liste">Liste</string>
    <string name="liste_completate_toolbar_title">Liste Completate</string>
    <string name="liste_home_toolbar_title">Le mie Liste</string>
    <string name="discover_toolbar_title">Esplora</string>
    <string name="preferiti_toolbar_title">Preferiti</string>
    <string name="search_discover_title">Cerca qui...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ricerca_ricette">Ricerca Ricette</string>
    <string name="discover">Esplora</string>
    <string name="preferiti">Preferiti</string>
    <string name="mieListe">Mie Liste</string>
    <string name="completati">Completati</string>
    <string name="search">Search</string>
    <string name="ordine_alfabetico_crescente_title"><![CDATA[A ⇒ Z]]></string>
    <string name="ordine_alfabetico_decrescente_title"><![CDATA[Z ⇒ A]]></string>
    <string name="ordine_alcool_decrescente_title">Decrescente</string>
    <string name="ordine_alcool_crescente_title">Crescente</string>
    <string name="title_activity_ricette_info">RicetteInfoActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_to_list">add to list</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="your_mail">your@mail</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="logout">Logout</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_your_password">Forget your \n Password?</string>
    <string name="reset">Reset</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="return_to_login">Return to \n Login</string>
    <string name="already_register">Already Register?</string>
    <string name="user_profile_toolbar_title">Profile</string>
    <string name="not_register">Not Register?</string>
    <string name="want_change_your_email">Want change your Email?</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="hello">Hello</string>
    <string name="list_analcolici">Mostra Analcolici</string>
    <string name="list_alcolici">Mostra Alcolici</string>
    <string name="ordina_ricette_title">Ordina Ricette</string>
    <string name="registration_failure">Registrazione fallita</string>
    <string name="want_reset_password">Want reset password?</string>
    <string name="load_fail">Caricamento Fallito</string>
    <string name="email_not_empty">Il campo email non può essere vuoto</string>
    <string name="password_reset_link">Link per il reset della password inviato</string>
    <string name="password_reset_link_error">Errore! Link per il reset della password non inviato</string>
    <string name="password_not_empty">Il campo password non può essere vuoto</string>
    <string name="password_too_short">La password deve essere composta da almeno 6 caratteri</string>
    <string name="successfull_login">Login avvenuto con successo</string>
    <string name="login_error">"Errore di login: "</string>
    <string name="name_not_empty">Il campo nome non può essere vuoto</string>
    <string name="invalid_password">Password not valid</string>
    <string name="password_requirements">La password deve contenere da 6 a 15 caratteri tra cui un numero e un carattere speciale</string>
    <string name="successfull_registration">Utente registrato con successo</string>
    <string name="registration_error">"Errore di registrazione: "</string>
    <string name="favourite_removed">" rimosso dai preferiti"</string>
    <string name="retry">Riprova</string>
    <string name="favourite_added">" aggiunta ai preferiti"</string>
    <string name="get_data_fail">Errore nell\'ottenere i dati</string>
    <string name="no_changes">Nessuna modifica</string>
    <string name="name_updated">Nome aggiornato con successo</string>
    <string name="name_not_updated">Errore nell\'aggiornamento del nome</string>
    <string name="informations_updated">Informazioni aggiornate</string>
    <string name="bad_email">Email non valida</string>
    <string name="incorrect_password">Password errata</string>
    <string name="forgot_password">Password dimenticata?</string>
    <string name="title_descrizione">Istruzioni:</string>
    <string name="title_ingredienti">Ingredienti:</string>
    <string name="nota_ingredienti">Nota: 1 oz equivale a 30 ml</string>
    <string name="annulla">Annulla</string>
    <string name="badEmail">Formato stringa  non valido</string>
    <string name="add_favorites">Errore nell\'aggiungere il preferito</string>
    <string name="incorrect_email">Email non corretta</string>
</resources>