<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_discover"
        android:title=""
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        android:iconTint="@color/white"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/sort_discover"
        android:title=""
        android:iconTint="@color/white"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/ordine_alfabetico_crescente"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/ordine_alfabetico_crescente_title"
                app:showAsAction="ifRoom|collapseActionView" />
            <item
                android:id="@+id/ordine_alfabetico_decrescente"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/ordine_alfabetico_decrescente_title"
                app:showAsAction="ifRoom|collapseActionView" />
            <item
                android:id="@+id/ordine_alcool_crescente"
                android:title="@string/ordine_alcool_crescente_title"
                app:showAsAction="ifRoom|collapseActionView" />
            <item
                android:id="@+id/ordine_alcool_decrescente"
                android:title="@string/ordine_alcool_decrescente_title"
                app:showAsAction="ifRoom|collapseActionView" />
        </menu>
    </item>
</menu>