<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">


  <ImageView
      android:id="@+id/imageLogin"
      android:layout_width="wrap_content"
      android:layout_height="280dp"
      android:layout_gravity="center"
      android:layout_margin="15dp"
      app:srcCompat="@drawable/ic_login"
      android:contentDescription="Login Image" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_gravity="center"
      android:layout_marginTop="5dp"
      android:layout_marginHorizontal="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:gravity="center_horizontal"
        android:textSize="40sp"
        android:minHeight="48dp"
        android:fontFamily="sans-serif-condensed-medium"/>

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/your_mail"
        android:minHeight="48dp"
        android:backgroundTint="@color/purple_personal_dark"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:backgroundTint="@color/purple_personal_dark"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_background_button"
        android:minHeight="48dp"
        android:elevation="8dp"
        android:text="@string/login" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="13sp"
        android:gravity="center_horizontal"
        android:text="Not Register?"
        android:textColor="@color/black_secondary"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="-12dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/sign_up"
        android:textColor="@color/purple_personal_dark"
        android:textStyle="bold" />

  </LinearLayout>

</LinearLayout>