<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.LoginFragment">


    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:src="@drawable/ic_login"
        android:contentDescription="Login Image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:minHeight="48dp"
            android:fontFamily="sans-serif-condensed-medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/your_mail"
            app:hintTextColor="@color/black_secondary"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_mail_24"
            app:startIconTint="@color/purple_personal_dark"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/loginEmail"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:hintTextColor="@color/black_secondary"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/purple_personal_dark"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="15dp">
            <Button
                android:id="@+id/forgetPassword"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="11sp"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_ripple_background"
            android:elevation="4dp"
            android:minHeight="48dp"
            android:paddingHorizontal="50dp"
            android:text="@string/login"
            android:enabled="false"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="12sp"
            android:gravity="center_horizontal"
            android:text="@string/not_register"
            android:layout_gravity="center"
            android:textColor="@color/black_secondary"/>

        <Button
            android:id="@+id/buttonSignUp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>
