<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.authentication.RegisterFragment">
    <ImageView
        android:id="@+id/imageRegister"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/ic_register"
        android:contentDescription="@string/register" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:fontFamily="sans-serif-condensed-medium"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name"
            app:hintTextColor="@color/black_secondary"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_supervised_user_circle_24"
            app:startIconTint="@color/purple_personal_dark"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/your_mail"
            app:hintTextColor="@color/black_secondary"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_mail_24"
            app:startIconTint="@color/purple_personal_dark"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/password"
            app:hintTextColor="@color/black_secondary"
            app:boxStrokeWidthFocused="2dp"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/purple_personal_dark"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_ripple_background"
            android:elevation="8dp"
            android:minHeight="48dp"
            android:paddingHorizontal="45dp"
            android:text="@string/register"
            android:enabled="false"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:gravity="center_horizontal"
            android:text="@string/already_register"
            android:textColor="@color/black_secondary"/>

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-12dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/sign_in"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>