<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical"
    tools:context=".ui.ForgotPasswordActivity">

        <ImageView
            android:id="@+id/imageForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_forgot_password"
            android:contentDescription="Forgot Image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_your_password"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="35sp"
                android:fontFamily="sans-serif-condensed-medium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_your_email"
                app:hintTextColor="@color/black_secondary"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/ic_baseline_mail_24"
                app:startIconTint="@color/purple_personal_dark"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/resetMail"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/resetButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:minHeight="48dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/login_background_button"
                android:elevation="8dp"
                android:text="@string/reset" />

            <Button
                android:id="@+id/returnToLogin"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="Return to Login"
                android:textColor="@color/purple_personal_dark"
                android:textSize="10sp"
                android:textStyle="bold" />
        </LinearLayout>

</LinearLayout>